# sporeseg

./: README.md  Spore_segmentation_demo.ipynb  pyproject.toml  setup.cfg  setup.py  sporeClass.py  spore_calling.py  spore_multiexperiment.py  spore_segmentation.py
notebooks/: Spore_segmentation_demo.ipynb
scripts/: demo_import.py  spore_calling.py  spore_multiexperiment.py  spore_segmentation.py
spores/: setup.py  sporeClass.py
spores/spores/: sporeClass.py
sporeseg/: Spores.py  __init__.py  spores.py
sporeseg/tests/: test_spores.py
