[metadata]
name = sporeseg
author = Guillaume Witz
author_email = guiwitz@gmail.com
description = Automated analysis of microscopy images of spores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guiwitz/sporeseg
license = BSD3

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scikit-image
    scikit-learn
    matplotlib
    tifffile
    pandas
    tqdm
    requests